Fixed header button alignment
Fix issues with header bar, currently tidying code

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
 body {
     background-color:black;
+    margin: 0;
   }
 
  header {
@@ -8,7 +9,7 @@ body {
   font-size: xx-large;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: bold;
-  padding: 10px;
+  padding: 20px;
   text-align: center;
  }
 
@@ -16,6 +17,8 @@ body {
   list-style-type: none;
   margin: 0;
   padding: 0;
+  background-color: red;
+
   overflow: hidden;
 }
 
@@ -54,7 +57,7 @@ li a:hover {
 }
 
 p {
-  text-align: center;
+  text-align: left;
   color:white;
 }
 
